feat: document model complete
